# create_raster

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh
doc/: point_in_triangle.excalidraw
doc/html/: HSL_8h_source.html  RTree_8h_source.html  annotated.html  classRTree-members.html  classRTree.html  classdelaunator_1_1Delaunator-members.html  classdelaunator_1_1Delaunator.html  classes.html  delaunator_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  structRTreeNode-members.html  structRTreeNode.html  structRTreeNode__coll__graph.map  structRTreeNode__coll__graph.md5  structTriangle-members.html  structTriangle.html  structdelaunator_1_1DelaunatorPoint-members.html  structdelaunator_1_1DelaunatorPoint.html  structdelaunator_1_1compare-members.html  structdelaunator_1_1compare.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  (+21 more)
doc/latex/: annotated.tex  classRTree.tex  classdelaunator_1_1Delaunator.tex  files.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex  structRTreeNode.tex  structRTreeNode__coll__graph.md5  structTriangle.tex  structdelaunator_1_1DelaunatorPoint.tex  structdelaunator_1_1compare.tex
include/: HSL.h  RTree.h
src/: CMakeLists.txt  HSL.cpp  RTree.cpp  main.cpp
tests/: CMakeLists.txt  openai_rtree.cpp  test_RTree.cpp  test_shadows.cpp
(+1 files in other folders)
